--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "China"
 # site_theme               : "default"
-title                    : "Welcom to Peiyang's website"
+title                    : "Welcome to Peiyang's website"
 title_separator          : "-"
 name                     : &name "Peiyang Jian"
 # description              : &description "personal description"
@@ -32,14 +32,14 @@ author:
   email            : "jpy315@qq.com" 
 
   # Academic websites
-  arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
-  impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
-  semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
-  scopus           : # URL
+  # arxiv            : # URL - Update with the correct link to your profile
+  # googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  # impactstory      : # URL
+  orcid            : "https://orcid.org/0009-0003-3947-6831"
+  # semantic         : # URL
+  # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  researchgate     : https://www.researchgate.net/profile/Peiyang-Jian?ev=hdr_xprf
+  # scopus           : # URL
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
