--- a/_config.yml
+++ b/_config.yml
@@ -7,15 +7,15 @@
 # server process.
 
 # Basic Site Settings
-locale                   : "China"
+locale                   : "zh-CN"
 # site_theme               : "default"
-title                    : "Welcome to Peiyang's website"
+title                    : "Peiyang Jian's Homepage"
 title_separator          : "-"
 name                     : &name "Peiyang Jian"
 # description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://peiyangjian.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "peiyangjian/peiyangjian.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -23,11 +23,11 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Peiyang Jian (简佩洋)"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "geoscience"
+  location         : "Wuhan, China"
+  employer         : "China University of Geosciences"
   uri              : # URL
   email            : "jpy315@qq.com" 
 
@@ -35,17 +35,17 @@ author:
   # arxiv            : # URL - Update with the correct link to your profile
   # googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   # impactstory      : # URL
-  orcid            : "https://orcid.org/0009-0003-3947-6831"
+  orcid              : "https://orcid.org/0009-0003-3947-6831"
   # semantic         : # URL
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : https://www.researchgate.net/profile/Peiyang-Jian?ev=hdr_xprf
+  researchgate       : "https://www.researchgate.net/profile/Peiyang-Jian?ev=hdr_xprf"
   # scopus           : # URL
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "Peiyang Jian"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
