--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "peiyangjian/peiyangjian.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   name             : "Peiyang Jian (简佩洋)"
   pronouns         : # example: "she/her"  
   bio              : "geoscience"
