把中文名去掉

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "peiyangjian/peiyangjian.github.io"
 author:
   # Biographic information
   avatar           : "profile.jpg"
-  name             : "Peiyang Jian (简佩洋)"
+  name             : "Peiyang Jian"
   pronouns         : # example: "she/her"  
   bio              : "geoscience"
   location         : "Wuhan, China"
